syntax = "proto3";
package authservice;

service AuthService {
    rpc Login (LoginRequest) returns (LoginReply);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginReply {
    string jwt = 1;
    string refresh_token = 2;
    string id = 3;
}